--- a/index.html
+++ b/index.html
@@ -6,10 +6,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOOD NETWORK</title>
+    <link rel="shortcut icon" href="photo/favicon.png" type="" sizes="16x16">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="display-flex">
+        <div class="width-half">
+            <h1><samp id="orange">Skip</samp> The Diet, <br>
+                Just Eat Healthy <br>
+                With Food Network</h1>
+
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p><br>
+
+            <a class="link-button" href="https://www.facebook.com/taijulamanbsl/" target="_blank">ORDER
+                FOOD</a>
+
+        </div>
+
+        <div class="width-half">
+            <img src="photo/photo1.png">
+        </div>
+
+    </section>
+
+    <section class=" display-flex-2">
+        <div class="width-half"><img src="photo/photo2.png" alt=""></div>
+        <div class="width-half">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+            <br>
+            <br>
+            <a class="link-button" href="https://www.facebook.com/taijulamanbsl/" target="_blank">contact
+                me</a>
+
+        </div>
+    </section>
+
+    <section>
+        <h2 class="center">My recipies</h2>
+        <p class="center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the <br>
+            1500s.</p>
+        <div class="food-iteam">
+            <div class="one-third"><img src="photo/soup.png" alt="">
+
+                <h3>soup</h3>
+                <p>a liquid food especially with a meat, fish, or vegetable stock as a base and often containing pieces
+                    of solid food.</p>
+
+            </div>
+
+            <div class="one-third"><img src="photo/salad.png" alt="">
+
+                <h3>salad</h3>
+                <p>a cold dish of various mixtures of raw or cooked vegetables, usually seasoned with oil, vinegar, or
+                    other dressing and sometimes accompanied by meat, fish, or other ingredients.</p>
+
+            </div>
+            <div class="one-third"><img src="photo/pasta.png" alt="">
+
+                <h3>pasta</h3>.
+                <p>a dish originally from Italy consisting of dough made from durum wheat and water, extruded or stamped
+                    into various shapes and typically cooked in boiling water.</p>
+
+            </div>
+        </div>
+        <br>
+    </section>
+    <section class="public-figur-flex">
+        <div class="last-width">
+            <h1>700k</h1>
+            <p>YouTube subscribe</p>
+        </div>
+        <div class="last-width">
+            <h1>2.4m</h1>
+            <p>instagram followers</p>
+        </div>
+        <div class="last-width">
+            <h1>100k</h1>
+            <p>Dribble shot</p>
+        </div>
+
+    </section>
+    <footer class="footer-text">
+        <h4> <span class="gold-color">Food</span> Network</h4>
+        <p> Eat healthy to live</p>
+    </footer>
 
 </body>
 
