--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="one-third"><img src="photo/soup.png" alt="">
 
                 <h3>soup</h3>
-                <p>a liquid food especially with a meat, fish, or vegetable stock as a base and often containing pieces
+                <p>A liquid food especially with a meat, fish, or vegetable stock as a base and often containing pieces
                     of solid food.</p>
 
             </div>
@@ -68,14 +68,14 @@
             <div class="one-third"><img src="photo/salad.png" alt="">
 
                 <h3>salad</h3>
-                <p>a cold dish of various mixtures of raw or cooked vegetables, usually seasoned with oil, vinegar, or
+                <p>A cold dish of various mixtures of raw or cooked vegetables, usually seasoned with oil, vinegar, or
                     other dressing and sometimes accompanied by meat, fish, or other ingredients.</p>
 
             </div>
             <div class="one-third"><img src="photo/pasta.png" alt="">
 
-                <h3>pasta</h3>.
-                <p>a dish originally from Italy consisting of dough made from durum wheat and water, extruded or stamped
+                <h3>pasta</h3>
+                <p>A dish originally from Italy consisting of dough made from durum wheat and water, extruded or stamped
                     into various shapes and typically cooked in boiling water.</p>
 
             </div>
