--- a/index.html
+++ b/index.html
@@ -97,6 +97,43 @@
         </div>
 
     </section>
+    <section class="like shadow main">
+        <h1 class="text"> Customer Review</h1>
+        <br>
+        <div class="flex">
+            <div class="space">
+                <h3> <span> Ronald</span> </h3>
+                <p> Sep 14, 2021</p>
+                <p>Rating : <span>5</span></p>
+                <p>So Far So Good</p>
+            </div>
+            <div class="space">
+                <h3><span> Alex</span> </h3>
+                <p> Feb 22, 2021</p>
+                <p>Rating : <span>4</span></p>
+                <p>No Problem At All</p>
+            </div>
+            <div class="space">
+                <h3><span>Benjamin</span> </h3>
+                <p> Mar 22, 2021</p>
+                <p>Rating : <span>5</span></p>
+                <p>Excellent</p>
+            </div>
+            <div class="space">
+                <h3><span> Michael</span> </h3>
+                <p> Apr 22, 2021</p>
+                <p>Rating : <span>5</span></p>
+                <p>I Am Happy</p>
+            </div>
+            <div class="space">
+                <h3><span>William</span> </h3>
+                <p> Aug 22, 2021</p>
+                <p>Rating : <span>4</span></p>
+                <p>Not Bad</p>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer-text">
         <h4> <span class="gold-color">Food</span> Network</h4>
         <p> Eat healthy to live</p>
