--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="width-half"><img src="photo/photo2.png" alt=""></div>
         <div class="width-half">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Condimentum diam orci pretium a pharetra,
-                feugiat cursus. Dictumst risus, sem egestas odio cras
-                adipiscing vulputate. Nisi, risus in suscipit non. Non
-                commodo volutpat, pharetra, vel.</p>
+            <p>We shares some of my favourite recipes.Find inspiration here for creative & delicious dishes,using the
+                best of our ingredients.Explore our recipes on Food Network to learn how to put together a range of
+                delicious meals, and watch our YouTube videos to find out how to use ingredients and equipment.
+
+                Contact Me</p>
             <br>
             <br>
             <a class="link-button" href="https://www.facebook.com/taijulamanbsl/" target="_blank">contact
@@ -53,8 +53,7 @@
 
     <section>
         <h2 class="center">My recipies</h2>
-        <p class="center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the <br>
+        <p class="center">lets check out lots of recipies.<br>
             1500s.</p>
         <div class="food-iteam">
             <div class="one-third"><img src="photo/soup.png" alt="">
